# agentic-repo-insights

./: .gitignore  Dockerfile  Makefile  README.md  requirements.txt
jupyter_notebooks/: PM-88-revenue-check.ipynb
rnd-python/: main.py  pyproject.toml
src/: llm.py  main.py  update_index.py  vectoriser.py  vectorize.py
